[gd_scene load_steps=3 format=3 uid="uid://cnyikjr0ysf8q"]

[ext_resource type="Script" uid="uid://b6eut86pb3aig" path="res://Scripts/menu_principal.gd" id="1_5jrt5"]
[ext_resource type="StyleBox" uid="uid://cuc55qbeur5fy" path="res://Cenas/estilodospaineis.tres" id="2_xc8du"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5jrt5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -638.0
offset_top = -131.5
offset_right = 638.0
offset_bottom = 131.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_xc8du")

[node name="VboxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VboxContainer"]
layout_mode = 2
text = "Tower Defense do Papai"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonIniciar" type="Button" parent="PanelContainer/VboxContainer"]
layout_mode = 2
text = "Iniciar"

[node name="ButtonSair" type="Button" parent="PanelContainer/VboxContainer"]
layout_mode = 2
text = "Sair"
